# shared_contracts

./: .coveragerc  .flake8  .pre-commit-config.yaml  .pyproject.toml.swp  CHANGELOG.md  README.md  __init__.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup_dev.py  verify_fix.py
.github/workflows/: ci.yml
agentforge_contracts/: __init__.py
agentforge_contracts/core/: __init__.py
agentforge_contracts/core/constants/: __init__.py
agentforge_contracts/core/interfaces/: __init__.py  agent_interface.py  common_errors.py  model_interface.py  tool_interface.py
agentforge_contracts/core/models/: __init__.py  agent_models.py  base_models.py  model_models.py  (+1 more)
agentforge_contracts/monitoring/: __init__.py
agentforge_contracts/schemas/: __init__.py
agentforge_contracts/utils/: __init__.py
core/: __init__.py
core/constants/: __init__.py  error_codes.py  message_types.py  service_constants.py
core/interfaces/: __init__.py  agent_interface.py  common_errors.py  model_interface.py  model_interface.py.backup  tool_interface.py
core/models/: __init__.py  agent_models.py  base_models.py  model_models.py  tool_models.py  tool_models.py.bak
docs/: ci_cd_guide.md  code_style_guide.md  core.md  index.md  integration.md  monitoring.md  testing_requirements.md  troubleshooting.md  utils.md
docs/guides/: code_style_guide.md  developer_guide.md  monitoring.md
examples/: README.md  complete_application_example.py  model_service_example.py  monitoring_example.py  service_communication_example.py  test_logfire.py  tool_service_example.py  utils_example.py
integration_tests/: README.md  __init__.py  conftest.py  run_integration_tests.py  test_agent_model_integration.py  test_agent_model_tool.py  test_agent_tool_integration.py  test_complete_workflow.py
monitoring/: __init__.py  monitor_interface.py  monitor_models.py  monitor_types.py  setup.py
monitoring/implementations/: __init__.py  logfire_ci_config.py  logfire_client.py  logfire_config.py
monitoring/utils/: __init__.py  logger_utils.py  tracing_utils.py
schemas/: __init__.py  agent_schemas.py  common_schemas.py  model_schemas.py  tool_schemas.py
scripts/: add_noqa.py  auto_format.sh  build.sh  check_files.sh  check_pydantic_version.py  comprehensive_fix.sh  deploy.sh  fix_all_auto.sh  fix_all_flake8.sh  fix_all_style_issues.sh  fix_bare_except.sh  fix_docstrings_auto.py  fix_flake8.sh  fix_fstrings.sh  fix_long_lines.sh  fix_remaining_long_lines.py  fix_unused_global.sh  fix_unused_vars.sh  format_project.sh  make_scripts_executable.sh  run_integration_tests.sh  run_tests.sh  setup_monitoring.py  setup_pre_commit.sh  validate.sh
scripts/fix_tools/: fix_bare_except.py  fix_docstrings.py  fix_fstrings.py  fix_imports.py  fix_long_lines.py  fix_type_annotations.py  fix_unused_global.py  fix_unused_vars.py
shared_contracts/: __init__.py
shared_contracts/core/: __init__.py
shared_contracts/monitoring/: __init__.py
shared_contracts/schemas/: __init__.py
shared_contracts/utils/: __init__.py
tests/: __init__.py  test_core_interfaces.py  test_core_models.py  test_logfire_client.py  test_monitor_autoconfigure.py  test_monitoring.py  test_utils.py
tests/helpers/: __init__.py  fixtures.py  mock_services.py  utils.py
tests/performance/: __init__.py  test_performance.py
tests/security/: __init__.py  test_security.py
tests/test_data/: agent_config.json  model_config.json  tool_definitions.json
utils/: __init__.py  schema_utils.py  serialization.py  timing.py  validation.py  version.py
