[tool.poetry]
name = "agentforge-contracts"
version = "0.1.0"
description = "共享契约库 - AgentForge平台的服务间接口定义"
authors = ["AI架构师工作室 <example@example.com>"]
readme = "README.md"
packages = [{include = "agentforge_contracts"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
typing-extensions = "^4.8.0"
fastapi = "^0.104.1"
httpx = "^0.25.0"            # 用于HTTP请求
jsonschema = "^4.19.0"       # 用于Schema验证
packaging = "^23.2"          # 用于版本比较
aiologger = "^0.7.0"         # 用于异步日志
asyncio = "^3.4.3"           # 用于异步支持

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"   # 用于测试异步功能
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
