[tool.poetry]
name = "agentforge-contracts"
version = "0.1.0"
description = "共享契约库 - AgentForge平台的服务间接口定义"
authors = ["AI架构师工作室 <example@example.com>"]
readme = "README.md"
packages = [{include = "agentforge_contracts"}, {include = "core"}, {include = "monitoring"}, {include = "schemas"}, {include = "utils"}, {include = "shared_contracts"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
typing-extensions = "^4.8.0"
fastapi = "^0.104.1"
httpx = "^0.25.0"            # 用于HTTP请求
jsonschema = "^4.19.0"       # 用于Schema验证
packaging = "^23.2"          # 用于版本比较
aiologger = "^0.7.0"         # 用于异步日志
asyncio = "^3.4.3"           # 用于异步支持

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"   # 用于测试异步功能
flake8 = "^7.2.0"
pre-commit = "^3.5.0"        # 用于Git钩子
flake8-bugbear = "^23.9.16"  # 用于检测潜在bug
flake8-docstrings = "^1.7.0" # 用于文档字符串检查
logfire = "^0.16.0"          # 用于监控和日志

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/\\.git/*", "*/\\.venv/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

# 忽略特定模块的类型检查
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "examples.*"
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
